# Computer-Network-project-1

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  ffmpeg.cpp  ffmpeg.h  newvisualnet.slnx  readme.docx  requirements.md  依赖库配置说明.md  项目快速配置指南.md
Visual-Net/: README.md  TEST_GUIDE.md  encoder_test.vcxproj  encoder_test.vcxproj.filters
Visual-Net/note/: Code.md  二维码布局示意_基于当前代码.md
Visual-Net/src/: ImgDecode.cpp  ImgDecode.h  code.cpp  code.h  encoder_test_main.cpp  main.cpp  pic.cpp  test_ffmpeg.cpp
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project1.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  copy_deps.vcxproj  copy_deps.vcxproj.filters  decoder.vcxproj  decoder_without_pic.vcxproj  encoder.vcxproj  encoder.vcxproj.filters  encoder_without_pic.vcxproj  encoder_without_pic.vcxproj.filters  textcode.vcxproj  textcode.vcxproj.filters  textdecode.vcxproj  textdecode.vcxproj.filters
build-test/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
docs/: CHANGELOG.md  README.md  optical_project_focus_and_roadmap.md  protocol_v1.md  protocol_v1_optimization_journey.md  protocol_v1_robust_108x108.md  visual_net_encoder_test.md  visual_net_ffmpeg_roundtrip.md  windows_quickstart.md
docs/protocols/: protocol_iso_qr_v2_course.md  protocol_iso_v2_integration_contract.md  protocol_qrx_25_3f1a.md  protocol_rgb_4color_option.md  protocol_v1.md
newvisualnet/: CRC16.cpp  CRC16.h  Config.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  FFmpegWrapper.cpp  FFmpegWrapper.h  FileUtils.cpp  FileUtils.h  QRPosition.cpp  QRPosition.h  drawQRLayout.cpp  drawQRLayout.h  main.cpp  newvisualnet.vcxproj  test_qr.cpp
newvisualnet/x64/Debug/: newvisualnet.exe.recipe
scripts/: gen_iso_qr_v2_samples.ps1  gen_v2_fixtures.py  run_project1.ps1  run_visual_net_roundtrip.ps1
src/: ImgDecode.cpp  ImgDecode.h  ImgParse.cpp  ImgParse.h  ImgParse_new.cpp  ImgParse_new.h  code.cpp  code.h  encoder.cpp  encoder.h  ffmpeg.cpp  ffmpeg.h  frame_constants.h  glad.c  image_io.h  main.cpp  main_without_pic.cpp  pic.cpp  pic.h  pic133.cpp  pic133.h  protocol_iso.cpp  protocol_iso.h  protocol_qr.cpp  protocol_qr.h  protocol_v1.cpp  protocol_v1.h  qr_iso.cpp  qr_iso.h  qr_iso_v29.cpp  qr_iso_v29.h  simple_image.cpp  simple_image.h  textcode.cpp  textdecode.cpp  visual_net_pipeline.cpp  visual_net_pipeline.h
src/include/glad/: glad.h
x64/Debug/log/: transcode_log.txt
